# robot_control_code

./: .gitignore  3D_slicer_interface.cpp  3D_slicer_interface.h  Benchtop_Accuracy_test.cpp  CMakeLists.txt  Export_2025-03-28_14h32m20_V1_Marker.csv  Makefile  Matrix.h  NewTransform.h  Point.h  README.MD  Relative_test.cpp  Robot.h  Transform-test.cpp  Transform.h  Transform_test.cpp  command.txt  control.cpp  distortionCorrection.h  forward_inverse_kinematic_comparison.cpp  forward_kinematics.cpp  forward_kinematics.h  galil_control_calls.cpp  galil_control_calls.h  galil_control_test.cpp  get_frames_in_output_file.cpp  get_test_grid  get_test_grid.cpp  grid.txt  helperFunctions.h  inverse_kinematics.cpp  inverse_kinematics.h  inverse_kinematics_test  inverse_kinematics_test.cpp  kinematic_grid_error_analysis  kinematic_grid_error_analysis.cpp  kinematic_structs.h  kinematics.cpp  kinematics.h  kinematics_end_effector_analysis_test.cpp  (+12 more)
Galil/: gotoF.dmc  home.dmc  main.dmc  moveAll.dmc  moveF.dmc  test.dmc
PROGRAMS/: Matrix.cpp  Pivot.h  PointCloudGenerator.cpp  PointCloudGenerator.h  PointCloudTest.h  README.TXT  dataReaderHelpers.h  instructions.txt  main.cpp  mainHelper.h
PROGRAMS/data/: pa2-debug-a-EM-nav.txt  pa2-debug-a-ct-fiducials.txt  pa2-debug-a-em-fiducialss.txt  pa2-debug-b-EM-nav.txt  pa2-debug-b-ct-fiducials.txt  pa2-debug-b-em-fiducialss.txt  pa2-debug-c-EM-nav.txt  pa2-debug-c-ct-fiducials.txt  pa2-debug-c-em-fiducialss.txt  pa2-debug-d-EM-nav.txt  pa2-debug-d-ct-fiducials.txt  pa2-debug-d-em-fiducialss.txt  pa2-debug-e-EM-nav.txt  pa2-debug-e-ct-fiducials.txt  pa2-debug-e-em-fiducialss.txt  pa2-debug-f-EM-nav.txt  pa2-debug-f-ct-fiducials.txt  pa2-debug-f-em-fiducialss.txt  pa2-unknown-g-EM-nav.txt  pa2-unknown-g-ct-fiducials.txt  pa2-unknown-g-em-fiducialss.txt  pa2-unknown-h-EM-nav.txt  pa2-unknown-h-ct-fiducials.txt  pa2-unknown-h-em-fiducialss.txt  pa2-unknown-i-EM-nav.txt  pa2-unknown-i-ct-fiducials.txt  pa2-unknown-i-em-fiducialss.txt  pa2-unknown-j-EM-nav.txt  pa2-unknown-j-ct-fiducials.txt  pa2-unknown-j-em-fiducialss.txt
kinematic_calibration/: atracsys_functions.cpp  atracsys_functions.h  data_collection.cpp  experiment.cpp  helpers.h  inverse_kinematics.h  jacobian.cpp  jacobian.h  kinematics.cpp  kinematics.h  precision.cpp  read_csv.cpp  robot_controller.h  simulation.cpp  wrapper.cpp  wrapper.h
kinematic_calibration/templated_classes/: Templated_Point.h  Templated_Transform.h
scripts/: Makefile  geometry2000.ini  img.csv  ini_helpers.h  ini_to_desmos.cpp  map.py  orient_ini.cpp  pivot_needle.h  pivot_robot.h  pyvenv.cfg
(+3 files in other folders)
